doc/v2.0/_sources/reference/generated/ak.unzip.rst.txt
ak.unzip
--------

.. py:module: ak.unzip

Defined in `awkward.operations.ak_unzip <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_unzip.py>`__ on `line 9 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/operations/ak_unzip.py#L9>`__.

.. py:function:: ak.unzip(array, *, highlevel=True, behavior=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict

If the ``array`` contains tuples or records, this operation splits them
into a Python tuple of arrays, one for each field.

If the ``array`` does not contain tuples or records, the single ``array``
is placed in a length 1 Python tuple.

For example,

.. code-block:: python


    >>> array = ak.Array([{"x": 1.1, "y": [1]},
    ...                   {"x": 2.2, "y": [2, 2]},
    ...                   {"x": 3.3, "y": [3, 3, 3]}])
    >>> x, y = ak.unzip(array)
    >>> x
    <Array [1.1, 2.2, 3.3] type='3 * float64'>
    >>> y
    <Array [[1], [2, 2], [3, 3, 3]] type='3 * var * int64'>

